syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.kotlang.auth.login";
option java_outer_classname = "CommonInternal";

option go_package = "github.com/Kotlang/authGo/generated";

package login;

message AddressProto {
    string city = 1;
    string state = 2;
    string country = 3;
    string address = 4;
}

enum Gender {
    Male = 0;
    Female = 1;
    Unspecified = 2;
}

message UserProfileProto {
    string loginId = 1;
    string name = 2;
    string photoUrl = 3;
    Gender gender = 4;
    bool isVerified = 5;
    string domain = 6;
    string preferredLanguage = 7;
    int64 createdOn = 8;
    //serialized json of static metadata for user profile.
    string metaDataMap = 9;
    map<string, AddressProto> addresses = 10;
    string email = 11;
    string phone = 12;
    repeated string attributes = 13;
}

message StatusResponse {
    string status = 1;
}